--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
+    "com.annulusgames.alchemy": "https://github.com/annulusgames/Alchemy.git?path=/Alchemy/Assets/Alchemy",
+    "com.coffee.ui-effect": "https://github.com/mob-sakai/UIEffect.git?path=Packages/src",
     "com.unity.ai.navigation": "2.0.7",
+    "com.unity.behavior": "1.0.9",
     "com.unity.cinemachine": "3.1.3",
     "com.unity.collab-proxy": "2.8.2",
     "com.unity.ide.rider": "3.0.36",
